--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,65 +32,65 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
               <h1>
-                Ruixuan Liu
+                Abulikemu (Abu) Abuduweili
               </h1>
               <p>
-                I am a PhD student in the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, part of the <a href="https://www.scs.cmu.edu/">School of Computer Science</a>,
+                I am a PhD student in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
                 at Carnegie Mellon University advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a> (<a href="https://www.ri.cmu.edu/robotics-groups/intelligent-control-lab/">Intelligent Control Lab</a>). 
-                My research focuses on robot learning and control, generative manufacturing, human-robot collaboration.
+                My research focuses on robot learning and control, human-robot collaboration, optimization, efficient machine learning, and computer vision.
               </p>
-              <p>I received my Bachelor’s degree in <a href="https://www.ece.cmu.edu/">Electrical and Computer Engineering</a> with a minor in Robotics at Carnegie Mellon University. 
-                 During my undergrad, I worked in the <a href="https://www.ri.cmu.edu/robotics-groups/air-lab/">AirLab</a> led by <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/">Prof. Sebastian Scherer</a>. 
-                 My work focused on sensor fusion and 3D reconstruction for building structure inspection.
+              <p>I received my Bachelor’s degree and Master's degree in <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
+              </p>
+              <p>I am seeking a full-time research-oriented positions. If you think my expertise aligns with your needs, please feel free to reach out.
               </p>
               <p style="text-align:center">
-                <a href="https://www.ri.cmu.edu/ri-people/ruixuan-liu/">Email</a> &nbsp;/&nbsp;
-                <a href="https://github.com/waynekyrie">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://scholar.google.com/citations?user=3v7sVbwAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://docs.google.com/document/d/1SmjADkqjzWgfmlfFL45Z0vY3sQQv-CgQMpszpe8Lrgc/edit?usp=sharing">CV</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/ruixuan-wayne-liu/"> LinkedIn </a>
+                <a href="abulikea@andrew.cmu.edu">Email</a> &nbsp;/&nbsp;
+                <a href="https://github.com/Walleclipse">GitHub</a> &nbsp;/&nbsp;
+                <a href="https://scholar.google.com/citations?user=6Oro5g8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
+                <a href="https://drive.google.com/file/d/1pvxpRDg_z5RAZR5gT_jkMQMRRaUKaQYw/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/abulikemu-abuduweili-9305b0171/"> LinkedIn </a>
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/ruixuan.jpg">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/Abulikemu.jpg">
             </td>
           </tr>
         </table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-          <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Highlights</h2>
-              <ul>
-                <li><h3>2024/11</h3> Our work on generative manufacturing and robotic assembly is featured on <a href="https://www.mmsonline.com/articles/test-bed-builds-up-robotics-research-at-carnegie-mellon-university">Modern Machine Shop News</a>.</li>
-                <li><h3>2024/09</h3> Finished internship as an Applied Scientist at Amazon Robotics.</li>
-                <li><h3>2024/05</h3> Two papers accepted to RA-L.</li>
-                <li><h3>2024/04</h3> One paper accepted to 2024 International Symposium on Flexible Automation (ISFA).</li>
-                <li><h3>2024/04</h3> One paper accepted to Transactions on Machine Learning Research (TMLR).</li>
-                <li><h3>2024/01</h3> One paper accepted to ACC 2024.</li>
-                <li><h3>2023/10</h3> Our work on robotic Lego construction is featured on <a href="https://www.cmu.edu/news/stories/archives/2023/October/lego-bricks-mill19">CMU News</a>.</li>
-                <li><h3>2023/09</h3> One paper accepted to IROS'23 Workshop on Formal methods techniques in robotics systems: Design and control.</li>
-                <li><h3>2023/05</h3> One paper accepted to ACC'23 Workshop on Recent Advancement of Human Autonomy Interaction and Integration.</li>
-                <li><h3>2023/05</h3> One paper accepted to CCTA 2023.</li>
-                <li><h3>2023/03</h3> One paper accepted to CDC 2023.</li>
-                <li><h3>2022/12</h3> Demonstrated our work on proactive human-robot co-assembly to Ford. [<a href="https://www.cmu.edu/news/stories/archives/2022/december/anticipating-a-partners-moves">CMU News</a>]</li>
-                <li><h3>2022/12</h3> Our paper at CPHS22 won the <h3>best student paper</h3> award.</li>
-                <li><h3>2022/08</h3> Finished internship as an Research Scientist at Siemens Berkeley.</li>
-                <li><h3>2022/08</h3> One paper accepted to IFAC CPHS 2022.</li>
-                <li><h3>2022/07</h3> One paper accepted to RSS'22 workshop in Close-Proximity HRC.</li>
-                <li><h3>2022/05</h3> One paper accepted to AIM 2022.</li>
-                <li><h3>2022/04</h3> One paper accepted to 2022 International Symposium on Flexible Automation (ISFA).</li>
-                <li><h3>2022/01</h3> Demonstrated our work on safe HRC with interactive industrial robots to <h3>President Biden</h3> at Mill 19, Pittsburgh. 
-                  [<a href="https://twitter.com/potus/status/1488154798746701824?s=21">President Biden's Twitter</a>]
-                  [<a href="https://www.cmu.edu/news/stories/archives/2022/january/biden-delivers-passionate-call-to-action-to-invest-in-american-innovation">CMU News</a>]
-                  [<a href="http://icontrol.ri.cmu.edu/news/demo-biden.html">Lab Website</a>]
-                </li>
-                <li><h3>2021/07</h3> One paper accepted to ICML'21 workshop of human in the loop learning.</li>
-                <li><h3>2020/12</h3> One paper jointly accepted to ACC 2021 and IEEE Control Systems Letters.</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+<!--        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">-->
+<!--          <tr>-->
+<!--            <td style="padding:2.5%;width:100%;vertical-align:middle">-->
+<!--              <h2>Highlights</h2>-->
+<!--              <ul>-->
+<!--                <li><h3>2024/11</h3> Our work on generative manufacturing and robotic assembly is featured on <a href="https://www.mmsonline.com/articles/test-bed-builds-up-robotics-research-at-carnegie-mellon-university">Modern Machine Shop News</a>.</li>-->
+<!--                <li><h3>2024/09</h3> Finished internship as an Applied Scientist at Amazon Robotics.</li>-->
+<!--                <li><h3>2024/05</h3> Two papers accepted to RA-L.</li>-->
+<!--                <li><h3>2024/04</h3> One paper accepted to 2024 International Symposium on Flexible Automation (ISFA).</li>-->
+<!--                <li><h3>2024/04</h3> One paper accepted to Transactions on Machine Learning Research (TMLR).</li>-->
+<!--                <li><h3>2024/01</h3> One paper accepted to ACC 2024.</li>-->
+<!--                <li><h3>2023/10</h3> Our work on robotic Lego construction is featured on <a href="https://www.cmu.edu/news/stories/archives/2023/October/lego-bricks-mill19">CMU News</a>.</li>-->
+<!--                <li><h3>2023/09</h3> One paper accepted to IROS'23 Workshop on Formal methods techniques in robotics systems: Design and control.</li>-->
+<!--                <li><h3>2023/05</h3> One paper accepted to ACC'23 Workshop on Recent Advancement of Human Autonomy Interaction and Integration.</li>-->
+<!--                <li><h3>2023/05</h3> One paper accepted to CCTA 2023.</li>-->
+<!--                <li><h3>2023/03</h3> One paper accepted to CDC 2023.</li>-->
+<!--                <li><h3>2022/12</h3> Demonstrated our work on proactive human-robot co-assembly to Ford. [<a href="https://www.cmu.edu/news/stories/archives/2022/december/anticipating-a-partners-moves">CMU News</a>]</li>-->
+<!--                <li><h3>2022/12</h3> Our paper at CPHS22 won the <h3>best student paper</h3> award.</li>-->
+<!--                <li><h3>2022/08</h3> Finished internship as an Research Scientist at Siemens Berkeley.</li>-->
+<!--                <li><h3>2022/08</h3> One paper accepted to IFAC CPHS 2022.</li>-->
+<!--                <li><h3>2022/07</h3> One paper accepted to RSS'22 workshop in Close-Proximity HRC.</li>-->
+<!--                <li><h3>2022/05</h3> One paper accepted to AIM 2022.</li>-->
+<!--                <li><h3>2022/04</h3> One paper accepted to 2022 International Symposium on Flexible Automation (ISFA).</li>-->
+<!--                <li><h3>2022/01</h3> Demonstrated our work on safe HRC with interactive industrial robots to <h3>President Biden</h3> at Mill 19, Pittsburgh. -->
+<!--                  [<a href="https://twitter.com/potus/status/1488154798746701824?s=21">President Biden's Twitter</a>]-->
+<!--                  [<a href="https://www.cmu.edu/news/stories/archives/2022/january/biden-delivers-passionate-call-to-action-to-invest-in-american-innovation">CMU News</a>]-->
+<!--                  [<a href="http://icontrol.ri.cmu.edu/news/demo-biden.html">Lab Website</a>]-->
+<!--                </li>-->
+<!--                <li><h3>2021/07</h3> One paper accepted to ICML'21 workshop of human in the loop learning.</li>-->
+<!--                <li><h3>2020/12</h3> One paper jointly accepted to ACC 2021 and IEEE Control Systems Letters.</li>-->
+<!--              </ul>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--        </table>-->
 
 
         <br>
@@ -102,7 +102,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm broadly interested in robotics, manipulation, learning and control, generative manufacturing, and human-robot collaboration. Please see the following list for my research works.
+                I'm broadly interested in robotics, machine learning, human-robot collaboration,  optimization and computer vision. Please see the following list for my research works.
               </p>
             </td>
           </tr>
@@ -179,10 +179,13 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Award</h2>
               <ul>
-                <li><h3>2022/12</h3> The Best Student Paper award at CPHS22.</li>
-                <li><h3>2019/05</h3> University Honors.</li>
-                <li><h3>Fall 2017-Spring 2018</h3> Dean's List of Engineering.</li>
-                <li><h3>Fall 2015-Spring 2016</h3> Dean's List of Engineering.</li>
+                <li><h3>2023/11</h3> CoRL Travel Grant.</li>
+                <li><h3>Fall 2021-Spring 2022</h3> CIT Dean’s Fellowship at CMU.</li>
+                <li><h3>Fall 2017-Spring 2018</h3> Best Paper Runner‑up at IJCAI Weakly Supervised Representation Learning Workshop.</li>
+                <li><h3>2020/8</h3> Excellent Graduation Thesis (M.S.) at Peking University.</li>
+                <li><h3>2020/5</h3> Incubic/Milton Chang Travel Grant at CLEO.</li>
+                <li><h3>2017/6</h3> (B.S.) Graduates with High Honors (Summa Cum Laude) at Peking University.</li>
+
               </ul>
             </td>
           </tr>
@@ -195,8 +198,8 @@
               <h2>Service</h2>
               <p><h3>Reviewer</h3> for 
                 <ul>
-                  <li><h3>Journals:</h3> IEEE L-CSS, IEEE RA-L, ACM TOMM.</li>
-                  <li><h3>Conferences:</h3> ICRA, IROS, ACC, ISFA.</li>
+                  <li><h3>Journals:</h3> IEEE T-RO, IEEE RA-L, IEEE T‐CSVT, TMLR. </li>
+                  <li><h3>Conferences:</h3> NeurIPS, ICML, ICLR, ICRA, CVPR, ECCV, ICCV, ACCV, WACV, AAAI.</li>
                 </ul>
               </p>
             </td>
@@ -208,11 +211,11 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Teaching</h2>
-              <p>Teaching assistant for 16-720: Computer Vision. Instructor: <a href="https://www.ri.cmu.edu/ri-faculty/srinivasa-g-narasimhan/">Prof. Srinivasa G. Narasimhan</a>.
+              <p>Teaching assistant for <a href="https://18661.github.io/">18-661: Introduction to Machine Learning for Engineers (CMU)</a>. Instructor: <a href="https://www.ece.cmu.edu/directory/bios/chi-yuejie.html">Prof. Yuejie Chi</a>.
               </p>
-              <p>Teaching assistant for <a href="https://www.cs.cmu.edu/~me/811/">16-811: Math Fundamentals for Robotics</a>. Instructor: <a href="https://www.ri.cmu.edu/ri-faculty/michael-erdmann/">Prof. Michael Erdmann</a>.
+              <p>Teaching assistant for <a href="https://18-786.github.io/">18-786: Introduction to Deep Learning (CMU)</a>. Instructor: <a href="https://www.ece.cmu.edu/directory/bios/sankaranarayanan-aswin.html">Prof. Aswin Sankaranarayanan</a>.
               </p>
-              <p>Teaching assistant for <a href="https://courses.ece.cmu.edu/18202">18-202: Mathematical Foundations of Electrical Engineering</a>. Instructor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José Moura</a>.
+              <p>Teaching assistant for Optoelectronics (PKU). Instructor: <a href="https://scholar.google.com/citations?user=FrNUsgEAAAAJ">Prof. Zhiping (James) Zhou</a>.
               </p>
             </td>
           </tr>
