--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
               <h1>
-                Abulikemu (Abu) Abuduweili
+                Abulikemu  Abuduweili
               </h1>
               <p>
                 I am a PhD student in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
@@ -44,7 +44,7 @@
               <p>I am seeking a full-time research-oriented positions. If you think my expertise aligns with your needs, please feel free to reach out.
               </p>
               <p style="text-align:center">
-                <a href="abulikea@andrew.cmu.edu">Email</a> &nbsp;/&nbsp;
+                <a href="https://www.ri.cmu.edu/ri-people/abulikemu-abuduweili-2/">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/Walleclipse">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=6Oro5g8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://drive.google.com/file/d/1pvxpRDg_z5RAZR5gT_jkMQMRRaUKaQYw/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
