--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -181,7 +181,7 @@
               <ul>
                 <li><h3>2023/11</h3> CoRL Travel Grant.</li>
                 <li><h3>Fall 2021-Spring 2022</h3> CIT Dean’s Fellowship at CMU.</li>
-                <li><h3>Fall 2017-Spring 2018</h3> Best Paper Runner‑up at IJCAI Weakly Supervised Representation Learning Workshop.</li>
+                <li><h3>2021/8</h3> Best Paper Runner‑up at IJCAI Weakly Supervised Representation Learning Workshop.</li>
                 <li><h3>2020/8</h3> Excellent Graduation Thesis (M.S.) at Peking University.</li>
                 <li><h3>2020/5</h3> Incubic/Milton Chang Travel Grant at CLEO.</li>
                 <li><h3>2017/6</h3> (B.S.) Graduates with High Honors (Summa Cum Laude) at Peking University.</li>
