--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,13 +35,19 @@
                 Abulikemu  Abuduweili
               </h1>
               <p>
-                I am a PhD student in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
-                at Carnegie Mellon University advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a> (<a href="https://www.ri.cmu.edu/robotics-groups/intelligent-control-lab/">Intelligent Control Lab</a>). 
-                My research focuses on robot learning and control, human-robot collaboration, optimization, efficient machine learning, and computer vision.
+                I am a PhD candidate in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
+                at Carnegie Mellon University. I am fortunate to be advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a>, in the Robotics Institute, School of Computer Science.
+                Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. 𝙷𝚞𝚖𝚙𝚑𝚛𝚎𝚢 𝚂𝚑𝚒</a> at the  Georgia Institute of Technology.
+                I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
+                My research interests lie in robot learning, human-robot collaboration, optimization, continual learning, data-efficient machine learning, and computer vision.
               </p>
-              <p>I received my Bachelor’s degree and Master's degree in <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
+              <p> I have also gained valuable industry experience through internships at several organizations.
+                 In the summer of 2024, I worked on Visual Representation Learning for Robotics at  <a href="https://www.microsoft.com/en-us/research/group/applied-robotics-research/">Microsoft Research Redmond</a>, collaborating with <a href="https://scriptedonachip.com/about">Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Naoki Wake</a>.
+                 During the summer of 2023, I focused on Diffusion Models at the <a href="https://www.tri.global/">Toyota Research Institute</a>, where I worked closely with <a href="https://www.mit.edu/~fperment/">Frank Permenter</a> and <a href="https://www.chenyang.co/">Chenyang Yuan</a>.
+                Before 2021, I conducted a research internship at  <a href="https://research.baidu.com/">Baidu Research</a> under the guidance of <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>.
+                I also completed a research internship at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/?msockid=12d145ad420660d9392f51d4439f617e">Microsoft Research Asia</a>, collaborating  with <a href="https://www.microsoft.com/en-us/research/people/qlin/"> Qingwei Lin</a>.
               </p>
-              <p>I am seeking a full-time research-oriented positions. If you think my expertise aligns with your needs, please feel free to reach out.
+              <p>I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.
               </p>
               <p style="text-align:center">
                 <a href="https://www.ri.cmu.edu/ri-people/abulikemu-abuduweili-2/">Email</a> &nbsp;/&nbsp;
@@ -98,7 +104,8 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm broadly interested in robotics, machine learning, human-robot collaboration,  optimization and computer vision. Please see the following list for my research works.
+                I'm broadly interested in the intersection of robotics and machine learning, with a focus on areas such as robot learning, human-robot collaboration, optimization, continual learning, data-efficient learning, and robot vision.
+                Below is a list of my research works  (* denotes equal contribution). For a full publication list, please visit my <a href="https://scholar.google.com/citations?user=6Oro5g8AAAAJ">Google Scholar</a>.
               </p>
             </td>
           </tr>
@@ -167,25 +174,25 @@
           {% endfor %}
         </table>
 
-        <br>
-        <br>
-        <br>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-          <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Award</h2>
-              <ul>
-                <li><h3>2023/11</h3> CoRL Travel Grant.</li>
-                <li><h3>Fall 2021-Spring 2022</h3> CIT Dean’s Fellowship at CMU.</li>
-                <li><h3>2021/8</h3> Best Paper Runner‑up at IJCAI Weakly Supervised Representation Learning Workshop.</li>
-                <li><h3>2020/8</h3> Excellent Graduation Thesis (M.S.) at Peking University.</li>
-                <li><h3>2020/5</h3> Incubic/Milton Chang Travel Grant at CLEO.</li>
-                <li><h3>2017/6</h3> (B.S.) Graduates with High Honors (Summa Cum Laude) at Peking University.</li>
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">-->
+<!--          <tr>-->
+<!--            <td style="padding:2.5%;width:100%;vertical-align:middle">-->
+<!--              <h2>Award</h2>-->
+<!--              <ul>-->
+<!--                <li><h3>2023/11</h3> CoRL Travel Grant.</li>-->
+<!--                <li><h3>Fall 2021-Spring 2022</h3> CIT Dean’s Fellowship at CMU.</li>-->
+<!--                <li><h3>2021/8</h3> Best Paper Runner‑up at IJCAI Weakly Supervised Representation Learning Workshop.</li>-->
+<!--                <li><h3>2020/8</h3> Excellent Graduation Thesis (M.S.) at Peking University.</li>-->
+<!--                <li><h3>2020/5</h3> Incubic/Milton Chang Travel Grant at CLEO.</li>-->
+<!--                <li><h3>2017/6</h3> (B.S.) Graduates with High Honors (Summa Cum Laude) at Peking University.</li>-->
 
-              </ul>
-            </td>
-          </tr>
-        </table>
+<!--              </ul>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--        </table>-->
 
         <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -196,6 +203,11 @@
                 <ul>
                   <li><h3>Journals:</h3> IEEE T-RO, IEEE RA-L, IEEE T‐CSVT, TMLR. </li>
                   <li><h3>Conferences:</h3> NeurIPS, ICML, ICLR, ICRA, CVPR, ECCV, ICCV, ACCV, WACV, AAAI.</li>
+                </ul>
+              </p>
+              <p><h3>Program Committee Member</h3> for
+                <ul>
+                  <li>ACL: Student Research Workshop </li>
                 </ul>
               </p>
             </td>
@@ -211,7 +223,7 @@
               </p>
               <p>Teaching assistant for <a href="https://18-786.github.io/">18-786: Introduction to Deep Learning (CMU)</a>. Instructor: <a href="https://www.ece.cmu.edu/directory/bios/sankaranarayanan-aswin.html">Prof. Aswin Sankaranarayanan</a>.
               </p>
-              <p>Teaching assistant for Optoelectronics (PKU). Instructor: <a href="https://scholar.google.com/citations?user=FrNUsgEAAAAJ">Prof. Zhiping (James) Zhou</a>.
+              <p>Teaching assistant for Optoelectronics (PKU). Instructor: <a href="https://scholar.google.com/citations?user=FrNUsgEAAAAJ">Prof. Zhiping Zhou</a>.
               </p>
             </td>
           </tr>
