--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
               <p>
                 I am a PhD candidate in the <a href="https://www.ece.cmu.edu/">Department of Electrical and Computer Engineering</a> and <a href="https://www.ri.cmu.edu/">Robotics Institute</a>,
                 at Carnegie Mellon University. I am fortunate to be advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a>, in the Robotics Institute, School of Computer Science.
-                Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. 𝙷𝚞𝚖𝚙𝚑𝚛𝚎𝚢 𝚂𝚑𝚒</a> at the  Georgia Institute of Technology.
+                Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a> at the  Georgia Institute of Technology.
                 I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
                 My research interests lie in robot learning, human-robot collaboration, optimization, continual learning, data-efficient machine learning, and computer vision.
               </p>
@@ -115,7 +115,7 @@
           {% for post in site.posts %}
           {% for cat in post.categories %}
           {% if cat == 'research' %}
-          <tr>
+          <tr style="{% if post.highlight %}background-color: #ffffcc;{% endif %}">
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:400px">
               <img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
             </td>
@@ -144,9 +144,6 @@
               {% if post.arxiv %}
               <a href="{{post.arxiv}}">paper</a> /
               {% endif %}
-              {% if post.video %}
-              <a href="{{post.video}}">video</a> /
-              {% endif %}
               {% if post.code %}
               <a href="{{post.code}}">code</a> /
               {% endif %}
@@ -158,6 +155,9 @@
               {% endif %}
               {% if post.website %}
               <a href="{{post.website}}">website</a> /
+              {% endif %}
+              {% if post.video %}
+              <a href="{{post.video}}">video</a> /
               {% endif %}
               {% if post.youtube %}
               <a href="{{post.youtube}}">youtube</a> /
