--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
                 Before 2021, I conducted a research internship at  <a href="https://research.baidu.com/">Baidu Research</a> under the guidance of <a href="https://www.mit.edu/~fperment/"> Prof. Dejing Dou</a>.
                 I also completed a research internship at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/?msockid=12d145ad420660d9392f51d4439f617e">Microsoft Research Asia</a>, collaborating  with <a href="https://www.microsoft.com/en-us/research/people/qlin/"> Qingwei Lin</a>.
               </p>
-              <p>I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.
+              <p style="color: red;">I am actively seeking a full-time, research-oriented position. If my expertise aligns with your needs, please feel free to reach out.
               </p>
               <p style="text-align:center">
                 <a href="https://www.ri.cmu.edu/ri-people/abulikemu-abuduweili-2/">Email</a> &nbsp;/&nbsp;
