--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,17 @@
 </head>
 
 <body>
+  <!-- Navigation Bar -->
+  <div style="width:100%; background-color: #ffe4c4; text-align: center; padding: 10px 0; position: fixed; top: 0; z-index: 1000;">
+    <a href="#home" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Home</a>
+    <a href="#research" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Research</a>
+    <a href="#service" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Service</a>
+    <a href="#teaching" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Teaching</a>
+    <a href="#projects" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Projects</a>
+  </div>
+
+ <!-- Main Content -->
+  <a id="home"></a>
   <table style="width:100%;max-width:1100px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr style="padding:0px">
       <td style="padding:0px">
@@ -40,6 +51,7 @@
                 Before joining CMU, I spent an enriching year as a research assistant with <a href="https://www.humphreyshi.com/">Prof. Humphrey Shi</a> at the  Georgia Institute of Technology.
                 I hold a Bachelor's and a Master's degree from the <a href="https://eecs.pku.edu.cn/en/">School of Electronics Engineering and Computer Science</a>  at Peking University.
                 My research interests lie in robot learning, human-robot collaboration, optimization, continual learning, data-efficient machine learning, and computer vision.
+                Feel free to reach out for collaborations or to discuss research. My official legal name is Abulikemu Abuduweili, but I also go by Abduwali or Abu.
               </p>
               <p> I have also gained valuable industry experience through internships at several organizations.
                  In the summer of 2024, I worked on Visual Representation Learning for Robotics at  <a href="https://www.microsoft.com/en-us/research/group/applied-robotics-research/">Microsoft Research Redmond</a>, collaborating with <a href="https://scriptedonachip.com/about">Lekan Molu</a> and <a href="https://www.microsoft.com/en-us/research/people/nawake/">Naoki Wake</a>.
@@ -63,42 +75,8 @@
           </tr>
         </table>
 
-<!--        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">-->
-<!--          <tr>-->
-<!--            <td style="padding:2.5%;width:100%;vertical-align:middle">-->
-<!--              <h2>Highlights</h2>-->
-<!--              <ul>-->
-<!--                <li><h3>2024/11</h3> Our work on generative manufacturing and robotic assembly is featured on <a href="https://www.mmsonline.com/articles/test-bed-builds-up-robotics-research-at-carnegie-mellon-university">Modern Machine Shop News</a>.</li>-->
-<!--                <li><h3>2024/09</h3> Finished internship as an Applied Scientist at Amazon Robotics.</li>-->
-<!--                <li><h3>2024/05</h3> Two papers accepted to RA-L.</li>-->
-<!--                <li><h3>2024/04</h3> One paper accepted to 2024 International Symposium on Flexible Automation (ISFA).</li>-->
-<!--                <li><h3>2024/04</h3> One paper accepted to Transactions on Machine Learning Research (TMLR).</li>-->
-<!--                <li><h3>2024/01</h3> One paper accepted to ACC 2024.</li>-->
-<!--                <li><h3>2023/10</h3> Our work on robotic Lego construction is featured on <a href="https://www.cmu.edu/news/stories/archives/2023/October/lego-bricks-mill19">CMU News</a>.</li>-->
-<!--                <li><h3>2023/09</h3> One paper accepted to IROS'23 Workshop on Formal methods techniques in robotics systems: Design and control.</li>-->
-<!--                <li><h3>2023/05</h3> One paper accepted to ACC'23 Workshop on Recent Advancement of Human Autonomy Interaction and Integration.</li>-->
-<!--                <li><h3>2023/05</h3> One paper accepted to CCTA 2023.</li>-->
-<!--                <li><h3>2023/03</h3> One paper accepted to CDC 2023.</li>-->
-<!--                <li><h3>2022/12</h3> Demonstrated our work on proactive human-robot co-assembly to Ford. [<a href="https://www.cmu.edu/news/stories/archives/2022/december/anticipating-a-partners-moves">CMU News</a>]</li>-->
-<!--                <li><h3>2022/12</h3> Our paper at CPHS22 won the <h3>best student paper</h3> award.</li>-->
-<!--                <li><h3>2022/08</h3> Finished internship as an Research Scientist at Siemens Berkeley.</li>-->
-<!--                <li><h3>2022/08</h3> One paper accepted to IFAC CPHS 2022.</li>-->
-<!--                <li><h3>2022/07</h3> One paper accepted to RSS'22 workshop in Close-Proximity HRC.</li>-->
-<!--                <li><h3>2022/05</h3> One paper accepted to AIM 2022.</li>-->
-<!--                <li><h3>2022/04</h3> One paper accepted to 2022 International Symposium on Flexible Automation (ISFA).</li>-->
-<!--                <li><h3>2022/01</h3> Demonstrated our work on safe HRC with interactive industrial robots to <h3>President Biden</h3> at Mill 19, Pittsburgh. -->
-<!--                  [<a href="https://twitter.com/potus/status/1488154798746701824?s=21">President Biden's Twitter</a>]-->
-<!--                  [<a href="https://www.cmu.edu/news/stories/archives/2022/january/biden-delivers-passionate-call-to-action-to-invest-in-american-innovation">CMU News</a>]-->
-<!--                  [<a href="http://icontrol.ri.cmu.edu/news/demo-biden.html">Lab Website</a>]-->
-<!--                </li>-->
-<!--                <li><h3>2021/07</h3> One paper accepted to ICML'21 workshop of human in the loop learning.</li>-->
-<!--                <li><h3>2020/12</h3> One paper jointly accepted to ACC 2021 and IEEE Control Systems Letters.</li>-->
-<!--              </ul>-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--        </table>-->
-
-
+        <!-- Research Section -->
+        <a id="research"></a>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -195,6 +173,8 @@
 <!--        </table>-->
 
         <br>
+        <!-- Service Section -->
+        <a id="service"></a>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -215,6 +195,8 @@
         </table>
 
         <br>
+        <!-- Teaching Section -->
+        <a id="teaching"></a>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -230,6 +212,8 @@
         </table>
 
         <br>
+        <!-- Projects Section -->
+        <a id="projects"></a>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -308,7 +292,7 @@
         </table>
 
         
-        
+        <!-- Footer -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:0px">
