--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,22 +26,16 @@
 
 <body>
   <!-- Navigation Bar -->
-  <div style="width:100%; background-color: #ffe4c4; text-align: center; padding: 10px 0; position: fixed; top: 0; z-index: 1000;">
+  <div style="width:100%; background: linear-gradient(90deg, #FFB385, #FFD28E); text-align: center; padding: 10px 0; position: fixed; top: 0; z-index: 1000;">
     <a href="/" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Abulikemu Abuduweili</a>
     <a href="#home" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Home</a>
     <a href="#research" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Research</a>
     <a href="#service" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Service</a>
     <a href="#teaching" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Teaching</a>
     <a href="#projects" style="margin: 0 15px; font-weight: bold; text-decoration: none; color: #000;">Projects</a>
-
-    <!-- Search Button -->
-    <form style="display: inline-block; margin-left: 15px;" action="/search" method="get">
-      <input type="text" name="q" placeholder="Search..." style="padding: 5px; font-size: 14px;">
-      <button type="submit" style="background: none; border: none; cursor: pointer;">
-        <img src="https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Search" style="width: 20px; height: 20px; vertical-align: middle;">
-      </button>
-    </form>
   </div>
+  <br>
+  <br>
 
  <!-- Main Content -->
   <a id="home"></a>
@@ -86,6 +80,8 @@
 
         <!-- Research Section -->
         <a id="research"></a>
+        <br>
+        <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -181,9 +177,10 @@
 <!--          </tr>-->
 <!--        </table>-->
 
-        <br>
         <!-- Service Section -->
         <a id="service"></a>
+        <br>
+        <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -203,9 +200,10 @@
           </tr>
         </table>
 
-        <br>
         <!-- Teaching Section -->
         <a id="teaching"></a>
+        <br>
+        <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -220,9 +218,10 @@
           </tr>
         </table>
 
-        <br>
         <!-- Projects Section -->
         <a id="projects"></a>
+        <br>
+        <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
